Closed Bug 1057537 Opened 10 years ago Closed 10 years ago

nsImapMailFolder::OnStartRequest generating error because it is not an nsIRequestObserver

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
normal

Tracking

(thunderbird34 fixed)

RESOLVED FIXED
Thunderbird 34.0
Tracking Status
thunderbird34 --- fixed

People

(Reporter: rkent, Assigned: rkent)

References

Details

(Keywords: regression)

Attachments

(1 file)

      No description provided.
I think this is not only VS2012. Trunk shows also this error on all platforms.
In compiles of mailnews on Visual Studio 2012, I am getting the following errors:

c:\tb\central\src\mailnews\imap\src\nsImapMailFolder.h(303) : error C3668: nsImapMailFolder::OnStartRequest' : method with override specifier 'override' did not override any base class methods
c:\tb\central\src\mailnews\imap\src\nsImapMailFolder.h(303) : error C3668: nsImapMailFolder::OnStopRequest' : method with override specifier 'override' did not override any base class methods

This is being caused by the declaration in nsImapMailFolder.h:

  NS_DECL_NSIREQUESTOBSERVER

Why is that there? It was a leftover from the patch for bug 91679 where the nsIStreamListener interface was removed, but they missed the declarations for the nsIRequestObserver underlying it. Now the Microsoft compiler is complaining when you specify override on a method that does not in fact exist in the base class.
Summary: nsIImapMailFolder::OnStartRequest generating error in VS2012 → nsImapMailFolder::OnStartRequest generating error because it is not an nsIRequestObserver
Assignee: nobody → kent
Status: NEW → ASSIGNED
Attachment #8477635 - Flags: review?(iann_bugzilla)
Comment on attachment 8477635 [details] [diff] [review]
1057537.patch [Checked in: Comment 5]

r=me
interested in what caused it to start showing now, but more important to get it fixed.
Attachment #8477635 - Flags: review?(iann_bugzilla) → review+
Comment on attachment 8477635 [details] [diff] [review]
1057537.patch [Checked in: Comment 5]

https://hg.mozilla.org/comm-central/rev/c977dce19121
Attachment #8477635 - Attachment description: 1057537.patch → 1057537.patch [Checked in: Comment 5]
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Keywords: regression
OS: Windows 8.1 → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 34.0
Version: Other Branch → Trunk
(In reply to Ian Neal from comment #4)
> interested in what caused it to start showing now

Bug 1034302.
Blocks: 1034302
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: