Bug 1057537, nsImapMailFolder is not an nsIRequestObserver r=IanN bustage fix on a CLOSED TREE